--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-6">
                     <h2>Made by:</h2>
-                    <p>Jose Enciso</p>
+                    <p class="je">Jose Enciso</p>
                 </div>
             </div>
         </div>
