--- a/templates/post.html
+++ b/templates/post.html
@@ -206,7 +206,7 @@
             </div>
             <div class="row">
                 <div class="col-12 form-group">
-                    <input type="submit" value="Submit" class="form-control submit btn btn-success">
+                    <button type="submit" class="form-control submit btn btn-success">Submit</button>
                 </div>
             </div>
              
