--- a/templates/post.html
+++ b/templates/post.html
@@ -19,7 +19,7 @@
                             <i class="fas fa-gamepad"></i>&nbsp;Title
                         </label>
                     </div>
-                    <input type="text" class="form-control" name="post-title" id="post-title" required>
+                    <input type="text" class="form-control" name="post-title" id="post-title" placeholder="Game title" required>
                 </div>
 
                 <div class="input-group mb-3 col-12">
@@ -28,12 +28,12 @@
                             <i class="fas fa-gamepad"></i>&nbsp;Subtitle
                         </label>
                     </div>
-                    <input type="text" class="form-control" name="post-subtitle" id="post-subtitle">
+                    <input type="text" class="form-control" name="post-subtitle" id="post-subtitle" placeholder="Game Subtitle">
                 </div>
             </div>
 
             <div class="row">
-                <div class="input-group mb-3 col-md-6 col-lg-6">                           
+                <div class="input-group mb-3 col-md-6 col-lg-5">                           
                     <div class="input-group-prepend">
                         <label for="release-date" class="input-group-text" id="inputGroupFileAddon01">
                             <i class="far fa-calendar-plus"></i>&nbsp;Release: 
@@ -44,37 +44,24 @@
                     </div>
                 </div>
                 
-                <div class="input-group mb-3 col-md-6 col-lg-6">
-                    <div class="input-group-prepend">
-                        <label class="input-group-text" for="post-cover">
-                            <i class="fas fa-file-image"></i>
-                        </label>
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="post_cover"  id="post-cover" aria-describedby="inputGroupFileAddon01" required>
-                        <label class="custom-file-label" for="post_over">Cover Image</label>
-                    </div>
-                </div>
-            </div>
-
-            <hr>
-            
-            <div class="row">
-                <div class="input-group mb-3 col-md-6 col-lg-6">
+                <div class="input-group mb-3 col-md-6 col-lg-4">
                     <label for="no_players" class="input-group-text"style="margin: 0;">
                         <i class="fas fa-gamepad"></i>&nbsp;Players</label>
-                    <input type="number" class="form-control" name="no_players" id="no-players" min="1" max="16" required>
+                    <input type="number" class="form-control" name="no_players"
+                    id="no-players" min="1" max="16" placeholder="1 - 16" required>
                 </div>
-                <div class="input-group mb-3 col-md-6 col-lg-6">
+
+                <div class="input-group mb-3 col-md-6 col-lg-3">
                     <div class="input-group-prepend">
                         <label for="score" class="input-group-text">
                             <i class="fas fa-star-half-alt"></i>&nbsp;Score
                         </label>
                     </div>
-                    <input type="number" class="form-control" name="game_score" id="game-score" min="0" max="100" required>
+                    <input type="number" class="form-control" name="game_score"
+                    id="game-score" min="0" max="100" placeholder="0 - 100" required>
                 </div>
             </div>
-            
+
             <hr>
             
             <div class="row">
@@ -119,58 +106,83 @@
 
             <div class="row">
                 <div class="form-group col-lg-12">
+                    
                     <legend class="post-legend">
                         <i class="fas fa-photo-video"></i>&nbsp;Gallery section
                     </legend>
-                    <p>Select 5 images that will be shown on the gallery.</p>
+                    <p>Select one image for your cover and 5 more that will be shown on the gallery.</p>
+                    <p><i class="fas fa-exclamation-triangle"></i>&nbsp;
+                        Warning! Due to the nature of mongoDB when saving images, it can confused the images already stored and 
+                        still to be stored because of the name given on each image, causing that some of posts displaying wrong images.
+                        <br>
+                        Make sure each image are named according to the game title and subtitle, and not just a simple numbre, like -<u>01.jpg</u>- as example.
+                    </p>
                 </div>
-                
-                <div class="input-group mb-3 col-lg-12">
+
+                <div class="input-group mb-3 col-md-6 col-lg-6">
+                    <div class="input-group-prepend">
+                        <label class="input-group-text" for="post-cover">
+                            <i class="fas fa-file-image"></i>
+                        </label>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" name="post_cover"  id="post-cover"
+                        aria-describedby="inputGroupFileAddon01" accept="image/png, image/jpeg" required>
+                        <label class="custom-file-label" for="post_over">Cover Image</label>
+                    </div>
+                </div>
+
+                <div class="input-group mb-3 col-lg-6">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01"><i class="fas fa-file-image"></i></span>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_1"  id="gallery-1" aria-describedby="gallery-1" required>
+                        <input type="file" class="custom-file-input" name="gallery_1"  id="gallery-1"
+                        aria-describedby="gallery-1" accept="image/png, image/jpeg" required>
                         <label class="custom-file-label" for="gallery-1">Image 1</label>
                     </div>
                 </div>
 
-                <div class="input-group mb-3 col-lg-12">
+                <div class="input-group mb-3 col-lg-6">
                     <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroupFileAddon01"><i class="fas fa-file-image"></i></span>
+                        <span class="input-group-text" id="inputGroupFileAddon02"><i class="fas fa-file-image"></i></span>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_2"  id="gallery-2" aria-describedby="gallery-2" required>
+                        <input type="file" class="custom-file-input" name="gallery_2"  id="gallery-2"
+                        aria-describedby="inputGroupFileAddon02" accept="image/png, image/jpeg" required>
                         <label class="custom-file-label" for="gallery-2">Image 2</label>
                     </div>
                 </div>
 
-                <div class="input-group mb-3 col-lg-12">
+                <div class="input-group mb-3 col-lg-6">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01"><i class="fas fa-file-image"></i></span>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_3"  id="gallery-3" aria-describedby="gallery-3" required>
+                        <input type="file" class="custom-file-input" name="gallery_3"  id="gallery-3"
+                        aria-describedby="gallery-3" accept="image/png, image/jpeg" required>
                         <label class="custom-file-label" for="gallery-3">Image 3</label>
                     </div>
                 </div>
 
-                <div class="input-group mb-3 col-lg-12">
+                <div class="input-group mb-3 col-lg-6">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01"><i class="fas fa-file-image"></i></span>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_4"  id="gallery-4" aria-describedby="gallery-4" required>
+                        <input type="file" class="custom-file-input" name="gallery_4"  id="gallery-4"
+                        aria-describedby="gallery-4" accept="image/png, image/jpeg" required>
                         <label class="custom-file-label" for="gallery-4">Image 4</label>
                     </div>
                 </div>
 
-                <div class="input-group mb-3 col-lg-12">
+                <div class="input-group mb-3 col-lg-6">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01"><i class="fas fa-file-image"></i></span>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="gallery_5"  id="gallery-5" aria-describedby="gallery-5" required>
+                        <input type="file" class="custom-file-input" name="gallery_5"  id="gallery-5"
+                        aria-describedby="gallery-5" accept="image/png, image/jpeg" required>
                         <label class="custom-file-label" for="gallery-5">Image 5</label>
                     </div>
                 </div>
@@ -182,26 +194,27 @@
                         <i class="fas fa-file-word"></i>&nbsp;Review Section
                     </legend>
                     <p>
-                        <i class="fas fa-file-code"></i>&nbsp;Html friendly: Give a go to your Html skills to add your owen spice to your post.
+                        <i class="fas fa-file-code"></i>&nbsp;Html friendly: Give a go to your Html skills and add your owen spice to your post.
                     </p>
                 </div>
                 <div class="col-lg-6 mb-3">
                     <label for="pros" class="post-pros input-group-text">
                         <i class="fas fa-thumbs-up"></i>&nbsp;Pros
                     </label>
-                    <textarea name="post-pros" class="form-control" id="pros" class="pros" required></textarea>                    
+                    <textarea name="post-pros" class="form-control" id="pros" class="pros" placeholder="What has been so good when playing this game?" required></textarea>                    
                 </div>
                 <div class="col-lg-6 mb-3">
                     <label for="cons" class="post-cons input-group-text">
                         <i class="fas fa-thumbs-down"></i>&nbsp;Cons
                     </label>
-                    <textarea name="post-cons" class="form-control" id="cons" class="cons" required></textarea>                    
+                    <textarea name="post-cons" class="form-control" id="cons" class="cons" placeholder="What has been the bad when playing this game?" required></textarea>                    
                 </div>
                 <div class="col-12 mb-3">
                     <label for="post-review" class="post-review input-group-text">
                         <i class="far fa-file-alt"></i>&nbsp;Review
                     </label>
-                    <textarea name="post-review" class="form-control" id="post-review" class="post-review" required></textarea>
+                    <textarea name="post-review" class="form-control" id="post-review" class="post-review" 
+                    placeholder="Write here your review about the game you want to talk about, dont forget you can add your own spice with your web development skills." required></textarea>
                 </div>
             </div>
             <div class="row">
