--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -3,11 +3,13 @@
 {% block content %}
 <div class="container">
     <form class="form form-edit" method="POST" action="{{url_for('update_post', post_id=post._id)}}" enctype="multipart/form-data">
+        <h2 class="post-heading"><i class="fas fa-edit"></i>&nbsp;Edit Post</h2>
         <fieldset class="fieldset">
-            <div class="row ">
-                <h2 class="post-heading"><i class="fas fa-edit"></i>&nbsp;Edit Post</h2>
+            
+            <div class="row author-container">
                 <legend><i class="fas fa-id-card"></i>&nbsp;User Section</legend>
-                <div class="col-sm-12 col-lg-6 input-group mb-3">
+                
+                <div class="col-sm-12 col-md-6 col-lg-6 input-group mb-3">
                     <div class="input-group-prepend">
                         <label for="post-title" class="input-group-text">
                             <i class="fas fa-user-circle"></i>&nbsp;Posted By
@@ -25,7 +27,7 @@
                     <input type="date" class="form-control" name="date_posted" value="{{ post.date_posted.strftime('%Y-%m-%d') }}">
                 </div>
             </div>
-
+            
             <div class="row edit-container">
                 <legend class="post-legend">
                     &nbsp;<i class="fas fa-gamepad"></i>&nbsp;Game Section
@@ -48,7 +50,7 @@
                     <input type="text" class="form-control" name="post-subtitle" id="post-subtitle" value="{{ post.post_subtitle }}">    
                 </div>
 
-                <div class="input-group mb-3 col-sm-12 col-md-6 col-lg-6">                           
+                <div class="input-group mb-3 col-sm-12 col-md-6 col-lg-4">                           
                     <div class="input-group-prepend">
                         <label for="release-date" class="input-group-text" id="inputGroupFileAddon01">
                             <i class="far fa-calendar-plus"></i>&nbsp;Release 
@@ -59,14 +61,14 @@
                     </div>
                 </div>
 
-                <div class="input-group mb-3 col-md-6 col-lg-6">
+                <div class="input-group mb-3 col-md-6 col-lg-4">
                     <label for="no_players" class="input-group-text"style="margin: 0;">
                         <i class="fas fa-gamepad"></i>&nbsp;Playes
                     </label>
                     <input type="number" class="form-control" name="no_players" id="no-players" min="1" max="16" value="{{ post.no_players }}">
                 </div>
                 
-                <div class="input-group mb-3 col-md-6 col-lg-6">
+                <div class="input-group mb-3 col-md-6 col-lg-4">
                     <div class="input-group-prepend">
                         <label for="score" class="input-group-text">
                             <i class="fas fa-star-half-alt"></i>&nbsp;Score
@@ -128,7 +130,7 @@
             
             <div class="gallery-container row">
                 <div class="gallery-header col-12">
-                    <legend class="post-legend">&nbsp;<i class="fas fa-photo-video"></i>&nbsp;Gallery Section</legend>
+                    <legend class="post-legend">&nbsp;<i class="fas fa-images"></i>&nbsp;Gallery Section</legend>
                     <p>Select one image for your cover and 5 more that will be shown on the gallery.</p>
                     <p><i class="fas fa-exclamation-triangle"></i>&nbsp;When editing the post, please make sure to reupload the images for the post. <br>Thanks!  </p>
                 </div>
@@ -138,7 +140,7 @@
                         <div class="icon-file">
                             <span class=""><i class="fas fa-file-image"></i></span>
                         </div>
-                        <div class="">
+                        <div class="d-flex justify-content-end">
                             <span class="prev-img" style="overflow: hidden;">{{ post.post_cover }}</span>
                             <input type="file" clas="file-input" name="post_cover" id="gallery-1" value="{{ post.post_cover }}" accept="image/png, image/jpeg">
                         </div>
@@ -150,7 +152,7 @@
                         <div class="icon-file">
                             <span class=""><i class="fas fa-file-image"></i></span>
                         </div>
-                        <div class="">
+                        <div class="d-flex justify-content-end">
                             <span class="prev-img" style="overflow: hidden;" for="gallery-1">{{ post.gallery_1 }}</span>
                         <input type="file" clas="file-input" name="gallery_1" id="gallery-1" value="{{ post.gallery_1 }}" accept="image/png, image/jpeg">
                         </div>
@@ -162,7 +164,7 @@
                         <div class="icon-file">
                             <span class=""><i class="fas fa-file-image"></i></span>
                         </div>
-                        <div class="">
+                        <div class="d-flex justify-content-end">
                             <span  class="prev-img" style="overflow: hidden;">{{ post.gallery_2 }}</span>
                             <input type="file" clas="file-input" name="gallery_2" id="gallery-2" value="{{ post.gallery_2 }}" accept="image/png, image/jpeg">
                         </div>
@@ -174,7 +176,7 @@
                         <div class="icon-file">
                             <span class=""><i class="fas fa-file-image"></i></span>
                         </div>
-                        <div class="">
+                        <div class="d-flex justify-content-end">
                             <span class="prev-img" style="overflow: hidden;">{{ post.gallery_3 }}</span>
                             <input type="file" clas="file-input" name="gallery_3" id="gallery-3" value="{{ post.gallery_3 }}" accept="image/png, image/jpeg">
                         </div>
@@ -185,9 +187,10 @@
                     <div class="custome-input-file custom-file">
                         <div class="icon-file">
                             <span class=""><i class="fas fa-file-image"></i></span></div>
-                        <div class="">
+                        <div class="d-flex justify-content-end">
                             <span class="prev-img" style="overflow: hidden;">{{ post.gallery_4 }}</span>
-                            <input type="file" clas="file-input" name="gallery_4" id="gallery-4" value="{{ post.gallery_4 }}" accept="image/png, image/jpeg"></div>
+                            <input type="file" clas="file-input" name="gallery_4" id="gallery-4" value="{{ post.gallery_4 }}" accept="image/png, image/jpeg">
+                        </div>
                     </div>
                 </div>
         
@@ -196,7 +199,7 @@
                         <div class="icon-file">
                             <span class=""><i class="fas fa-file-image"></i></span>
                         </div>
-                        <div class="">
+                        <div class="d-flex justify-content-end">
                             <span class="prev-img" fstyle="overflow: hidden;">{{ post.gallery_5 }}</span>
                             <input type="file" clas="file-input" name="gallery_5" id="gallery-5" value="{{ post.gallery_5 }}" accept="image/png, image/jpeg">
                         </div>
