--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1 class=" ">Page Not Found</h1>
+<div class="container">
+    <div class="response_container text-white">
+        <div class="response_message mt-5">
+            <h1 class="oops">Oops!</h1>
+            <div class="error-message">
+                <p>Page Not Found</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
