--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
                     </a>
                 </h5>
-                <div class="card-text card-text-container">{{ post.post_review|safe}}</div>
+                <div class="card-text card-text-container">{{ post.post_review|truncate(530)|striptags}}</div>
                 <small class="footer-card">
                     <strong>Posted by:</strong>
                     <span class="card-author">{{ post.posted_by|capitalize }}</span>
