Re-structuring error handlers

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -6,7 +6,7 @@
         <div class="response_message mt-5">
             <h1 class="oops">Oops!</h1>
             <div class="error-message">
-                <p>Page Not Found</p>
+                <p>Page Not Found :'(</p>
             </div>
         </div>
     </div>
