--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,3 +1,4 @@
+ 
 {% extends 'base.html' %}
 {% block content %}
 
@@ -6,7 +7,7 @@
         <div class="response_message mt-5">
             <h1 class="oops">Oops!</h1>
             <div class="error-message">
-                <p>Internal Server Erro!</p>
+                <p>Internal Server Error!</p>
             </div>
         </div>
     </div>
