--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -4,20 +4,19 @@
 {% block content %}
  
 <div class="container-fluid review-container">
-    <div class="game-header">
-        {% if 'username' in session %}
-            <div class=" p-3 mb-2 row bg-info">
-                <div class="col-6 edit-post d-flex">
-                    <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit-post btn btn-warning text-white">Edit Post</a>
-                </div>
-                <div class="col-6 delete-post d-flex">
-                    <a href="{{ url_for('delete_post', post_id=post._id) }}" class="delele-post btn btn-danger text-white">Delete Post</a>
-                </div>
+    {% if 'username' in session %}
+        <div class="p-3 mb-3 bg-info d-flex justify-content-around">
+            <div class="edit-post d-flex">
+                <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit-post btn btn-warning text-white">Edit Post</a>
             </div>
-            
-        {% endif %}
-
-        <div class="author-post h5 d-flex justify-content-around text-light">
+            <div class="delete-post d-flex">
+                <a href="{{ url_for('delete_post', post_id=post._id) }}" class="delele-post btn btn-danger text-white">Delete Post</a>
+            </div>
+        </div>
+        
+    {% endif %}
+    <div class="game-header">
+        <div class="author-post mb-3 h5 d-flex justify-content-around text-light">
             <div class="author d-flex"><i class="fas fa-user-edit"></i>&nbsp;<span>{{ post.posted_by }}</span></div>
             <div class="posted-date d-flex"><i class="far fa-calendar-alt"></i>&nbsp;{{ post.date_posted.strftime('%d/%b/%Y') }}</div>
         </div> 
